[Dist] remove dist from repo

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prepublishOnly": "run-s build",
     "lint-staged": "lint-staged",
     "dev": "cross-env BABEL_ENV=cjs babel-node example/startServer.js",
+    "prepare": "npm install",
     "postinstall": "node ./scripts/postinstall.js || exit 0"
   },
   "repository": {
