--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lint-staged": "lint-staged",
     "dev": "cross-env BABEL_ENV=cjs babel-node example/startServer.js",
     "prepare": "npm install",
+    "install": "run-s build",
     "postinstall": "node ./scripts/postinstall.js || exit 0"
   },
   "repository": {
